[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tooloceans"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
]

[tool.hatch.build.targets.wheel]
packages = ["tooloceans"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
